# api-specifications/src/main/java/com/stemlaur/anki/application/controllers/model/AddCardRequest.java
@@ -1,0 +1,112 @@
+/*
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *       http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ */
+package com.stemlaur.anki.application.controllers.model;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import io.swagger.annotations.ApiModelProperty;
+
+import java.util.Objects;
+
+/**
+ * AddCardRequest
+ */
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-01-26T09:30:05.187773+01:00[Europe/Paris]")
+public class AddCardRequest {
+    @JsonProperty("answer")
+    private String answer;
+
+    @JsonProperty("question")
+    private String question;
+
+    public AddCardRequest answer(String answer) {
+        this.answer = answer;
+        return this;
+    }
+
+    /**
+     * Get answer
+     *
+     * @return answer
+     */
+    @ApiModelProperty(value = "")
+
+    public String getAnswer() {
+        return answer;
+    }
+
+    public void setAnswer(String answer) {
+        this.answer = answer;
+    }
+
+    public AddCardRequest question(String question) {
+        this.question = question;
+        return this;
+    }
+
+    /**
+     * Get question
+     *
+     * @return question
+     */
+    @ApiModelProperty(value = "")
+
+    public String getQuestion() {
+        return question;
+    }
+
+    public void setQuestion(String question) {
+        this.question = question;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) {
+            return true;
+        }
+        if (o == null || getClass() != o.getClass()) {
+            return false;
+        }
+        AddCardRequest addCardRequest = (AddCardRequest) o;
+        return Objects.equals(this.answer, addCardRequest.answer) &&
+                Objects.equals(this.question, addCardRequest.question);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(answer, question);
+    }
+
+    @Override
+    public String toString() {
+        StringBuilder sb = new StringBuilder();
+        sb.append("class AddCardRequest {\n");
+
+        sb.append("    answer: ").append(toIndentedString(answer)).append("\n");
+        sb.append("    question: ").append(toIndentedString(question)).append("\n");
+        sb.append("}");
+        return sb.toString();
+    }
+
+    /**
+     * Convert the given object to string with each line indented by 4 spaces
+     * (except the first line).
+     */
+    private String toIndentedString(Object o) {
+        if (o == null) {
+            return "null";
+        }
+        return o.toString().replace("\n", "\n    ");
+    }
+}
+
