# api-specifications/src/main/resources/openapi.yml
@@ -1,159 +1,322 @@
-openapi: 3.0.2
+openapi: 3.0.1
 info:
-  title: Reflectoring
-  description: "Tutorials on Spring Boot and Java, thoughts about the Software Craft, and relevant book reviews. Because it's just as important to understand the Why as it is to understand the How. Have fun!"
-  termsOfService: http://swagger.io/terms/
-  contact:
-    email: petros.stergioulas94@gmail.com
+  title: Anki open api documentation.
+  description: Anki open api documentation, written with API first mindset.
   license:
     name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.0.1-SNAPSHOT
-externalDocs:
-  description: Find out more about Reflectoring
-  url: https://reflectoring.io/about/
+    url: https://www.apache.org/licenses/LICENSE-2.0
+  version: "1.0"
 servers:
-  - url: https://reflectoring.swagger.io/v2
+  - url: http://localhost:8080/api
 tags:
-  - name: user
-    description: Operations about user
-    externalDocs:
-      description: Find out more about our store
-      url: http://swagger.io
+  - name: deck
+    description: Deck context
+  - name: study
+    description: Study context
 paths:
-  /user:
-    post:
-      tags:
-        - user
-      summary: Create user
-      description: Create user functionality
-      operationId: createUser
-      requestBody:
-        description: Created user object
-        content:
-          '*/*':
-            schema:
-              $ref: '#/components/schemas/User'
-        required: true
-      responses:
-        default:
-          description: successful operation
-          content: { }
-      x-codegen-request-body-name: body
-  /user/{username}:
+  /decks:
     get:
       tags:
-        - user
-      summary: Get user by user name
-      operationId: getUserByName
+        - deck
+      summary: List all existing decks
+      operationId: listDecks
+      responses:
+        200:
+          description: Successfully retrieved list
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DeckDTO'
+        401:
+          description: Unauthorized
+          content: { }
+        403:
+          description: Forbidden
+          content: { }
+        404:
+          description: Not Found
+          content: { }
+        500:
+          description: An internal server error occured
+          content: { }
+    post:
+      tags:
+        - deck
+      summary: Create a deck
+      operationId: createDeck
+      requestBody:
+        description: Create deck request object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateDeckRequest'
+        required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+        201:
+          description: Successfully created and id returned
+          content:
+            application/json:
+              schema:
+                type: string
+        401:
+          description: Unauthorized
+          content: { }
+        403:
+          description: Forbidden
+          content: { }
+        404:
+          description: Not Found
+          content: { }
+        500:
+          description: An internal server error occured
+          content: { }
+      x-codegen-request-body-name: request
+  /decks/{id}:
+    get:
+      tags:
+        - deck
+      summary: Find an existing deck by its id
+      operationId: findDeckById
       parameters:
-        - name: username
+        - name: id
           in: path
-          description: 'The name that needs to be fetched. Use user1 for testing. '
+          description: The id of the deck
           required: true
           schema:
             type: string
       responses:
         200:
-          description: successful operation
+          description: Successfully found
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-        404:
-          description: User not found
+                $ref: '#/components/schemas/DeckDTO'
+        401:
+          description: Unauthorized
           content: { }
-    put:
+        403:
+          description: Forbidden
+          content: { }
+        404:
+          description: Deck not found
+          content: { }
+        500:
+          description: An internal server error occurred
+          content: { }
+  /decks/{id}/card:
+    post:
       tags:
-        - user
-      summary: Updated user
-      description: This can only be done by the logged in user.
-      operationId: updateUser
+        - deck
+      summary: Add a card to an existing deck
+      operationId: addCardToDeck
       parameters:
-        - name: username
+        - name: id
           in: path
-          description: name that need to be updated
+          description: The id of the deck
           required: true
           schema:
             type: string
       requestBody:
-        description: Updated user object
+        description: Add card request object
         content:
-          '*/*':
+          application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/AddCardRequest'
         required: true
       responses:
         200:
-          description: successful operation
+          description: Successfully added the card
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-        400:
-          description: Invalid user supplied
+                type: object
+        201:
+          description: Created
+          content: { }
+        401:
+          description: Unauthorized
+          content: { }
+        403:
+          description: Forbidden
           content: { }
         404:
-          description: User not found
+          description: Deck not found
           content: { }
-      x-codegen-request-body-name: body
-    delete:
+        500:
+          description: An internal server error occured
+          content: { }
+      x-codegen-request-body-name: addCardRequest
+  /sessions:
+    post:
       tags:
-        - user
-      summary: Delete user
-      description: This can only be done by the logged in user.
-      operationId: deleteUser
+        - study
+      summary: Create a study session
+      operationId: createStudySession
+      requestBody:
+        description: request
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateStudySessionRequest'
+        required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+        201:
+          description: Successfully created and id returned
+          content:
+            application/json:
+              schema:
+                type: string
+        401:
+          description: Unauthorized
+          content: { }
+        403:
+          description: Forbidden
+          content: { }
+        404:
+          description: Not Found
+          content: { }
+        500:
+          description: An internal server error occured
+          content: { }
+      x-codegen-request-body-name: request
+  /sessions/{id}/nextCard:
+    get:
+      tags:
+        - study
+      summary: Get next card to study
+      operationId: nextCardToStudy
       parameters:
-        - name: username
+        - name: id
           in: path
-          description: The name that needs to be deleted
+          description: id
           required: true
           schema:
             type: string
       responses:
-        201:
-          description: operation successful
+        200:
+          description: Successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NextCardToStudyResponse'
+        401:
+          description: Unauthorized
           content: { }
-        400:
-          description: Invalid username supplied
+        403:
+          description: Forbidden
           content: { }
         404:
-          description: User not found
+          description: Session or deck not found
           content: { }
+        500:
+          description: An internal server error occured
+          content: { }
+  /sessions/{id}/opinion:
+    post:
+      tags:
+        - study
+      summary: Give it's opinion about a card
+      operationId: studyCard
+      parameters:
+        - name: id
+          in: path
+          description: id
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: request
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StudyCardRequest'
+        required: true
+      responses:
+        200:
+          description: Successfully gave opinion
+          content:
+            application/json:
+              schema:
+                type: object
+        201:
+          description: Created
+          content: { }
+        401:
+          description: Unauthorized
+          content: { }
+        403:
+          description: Forbidden
+          content: { }
+        404:
+          description: Session or card not found
+          content: { }
+        500:
+          description: An internal server error occured
+          content: { }
+      x-codegen-request-body-name: request
 components:
   schemas:
-    User:
+    AddCardRequest:
+      title: AddCardRequest
+      type: object
+      properties:
+        answer:
+          type: string
+        question:
+          type: string
+    CreateDeckRequest:
+      title: CreateDeckRequest
+      type: object
+      properties:
+        title:
+          type: string
+    CreateStudySessionRequest:
+      title: CreateStudySessionRequest
+      type: object
+      properties:
+        deckId:
+          type: string
+    DeckDTO:
+      title: DeckDTO
       type: object
       properties:
         id:
-          type: integer
-          format: int64
-        username:
           type: string
-        firstName:
+        title:
           type: string
-        lastName:
+    NextCardToStudyResponse:
+      title: NextCardToStudyResponse
+      type: object
+      properties:
+        answer:
           type: string
-        email:
+        id:
           type: string
-        password:
+        question:
           type: string
-        phone:
+    StudyCardRequest:
+      title: StudyCardRequest
+      type: object
+      properties:
+        cardId:
           type: string
-        userStatus:
-          type: integer
-          description: User Status
-          format: int32
-  securitySchemes:
-    reflectoring_auth:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: http://reflectoring.swagger.io/oauth/dialog
-          scopes:
-            write:users: modify users
-            read:users: read users
-    api_key:
-      type: apiKey
-      name: api_key
-      in: header
+        opinion:
+          type: string
+          enum:
+            - GREEN
+            - ORANGE
+            - RED
