# application/src/main/java/com/stemlaur/anki/application/controllers/study/CreateStudySessionRequest.java
@@ -1,28 +1,0 @@
-/*
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
- *
- *       http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
- */
-package com.stemlaur.anki.application.controllers.study;
-
-import com.fasterxml.jackson.annotation.JsonProperty;
-
-final class CreateStudySessionRequest {
-    private final String deckId;
-
-    public CreateStudySessionRequest(@JsonProperty("deckId") final String deckId) {
-        this.deckId = deckId;
-    }
-
-    public String getDeckId() {
-        return deckId;
-    }
-}
